# esp32

./: DEVELOPMENT_DOCUMENTATION.md  MQTT_DEBUG_GUIDE.md  index.html  mosq_ws.conf  mosquitto.conf  mosquitto_server.py  mqtt_console.py  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  net_mqtt.c  net_mqtt.h
main/display/: status_list.c  status_list.h  tft_ili9341.c  tft_ili9341.h
main/led/: led_effects.c  led_effects.h  led_ws2812.c  led_ws2812.h
main/util/: color.c  color.h
